clusters/labinfra/apps/medusa.xuperson.org/medusa-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: medusa
  labels:
    name: medusa
    app.kubernetes.io/name: medusa
    app.kubernetes.io/part-of: medusa-commerce
