clusters/labinfra/apps/medusa.xuperson.org/medusa-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medusa-backend
  namespace: medusa
  labels:
    app: medusa-backend
spec:
  type: ClusterIP
  selector:
    app: medusa-backend
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
