clusters/labinfra/apps/medusa.xuperson.org/medusa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medusa
  namespace: medusa
  labels:
    app: medusa
spec:
  selector:
    app: medusa
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
