clusters/labinfra/apps/medusa.xuperson.org/medusa-storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medusa-storefront
  namespace: medusa
  labels:
    app: medusa-storefront
spec:
  type: ClusterIP
  selector:
    app: medusa-storefront
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
