clusters/labinfra/apps/medusa.xuperson.org/medusa-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa
  namespace: medusa
  labels:
    app: medusa
    app.kubernetes.io/name: medusa
    app.kubernetes.io/component: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "medusa.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: medusa.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medusa
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-console
  namespace: medusa
  labels:
    app: medusa
    app.kubernetes.io/name: medusa
    app.kubernetes.io/component: console-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "medusa-console.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/rewrite-target: /app/$2
spec:
  ingressClassName: nginx
  rules:
  - host: medusa-console.xuperson.org
    http:
      paths:
      - path: /app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: medusa
            port:
              number: 80
